--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div></div>
         <div id="PROJECTS">
         <div class="pro">
-            <h1 class="s1">Technical Projects</h1></div>
+            <h1 class="s1">Tech Projects</h1></div>
                     <div class="gallery">
                 <div class="card1">
                 <h2>IndiVista</h2>
