--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <h2><i class="fas fa-database"></i>&nbsp; Database</h2>
                         <p style="color:white;">SQL Database (MySQL)</p>
                     </div>
-                    <div class="s2box">
+                    <!-- <div class="s2box">
                         <h2> <i class="fa-solid fa-hard-drive"></i>&nbsp; Operating Systems</h2>
                         <p style="color:white;">Windows, Linux</p>
-                    </div>
+                    </div> -->
                     <div class="s2box">
                         <h2><i class="fa fa-briefcase"></i>&nbsp; Professional Skills</h2>
                         <p>Time Management, Communication, Teamwork, Adaptability</p>
@@ -70,19 +70,24 @@
         <div class="pro">
             <h1 class="s1">Tech Projects</h1></div>
                     <div class="gallery">
-                <div class="card1">
-                <h2>IndiVista</h2>
-                <p>IndiVista is a web application that showcases the beauty of India's states. It highlights attractions like temples and waterfalls through a clean, visually consistent interface designed for smooth browsing and a rich cultural experience.</p>
-                <h2 style="margin-top: 10px;">Highlights</h2>
-                <ul>
-                <li>Showcases Indian states with a focus on temples and waterfalls.</li>
-                <li>Features a clean interface for smooth and consistent browsing.</li>
-                </ul>
-                <button>HTML</button> &nbsp;&nbsp; <button>CSS</button>
-                </div>
+                    <div class="card1">
+                        <h2>IndiVista</h2>
+                        <a href="https://lohithaalekhyakollu.github.io/Indivista/index.html" target="_blank" class="floating-link-btn">
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                        <p>IndiVista is a web application that showcases the beauty of India's states. It highlights attractions like temples and waterfalls through a clean, visually consistent interface designed for smooth browsing and a rich cultural experience.</p>
+                        <h2 style="margin-top: 10px;">Highlights</h2>
+                        <ul>
+                            <li>Showcases Indian states with a focus on temples and waterfalls.</li>
+                            <li>Features a clean interface for smooth and consistent browsing.</li>
+                        </ul>
+                        <button>HTML</button> &nbsp;&nbsp; <button>CSS</button>
+                    </div>
                 <div class="card2">
-                <h2>AgriAssist</h2>
-                <p>AgriAssist is a smart platform that supports rural communities. It provides essential tools like real-time weather updates and crop suggestions, simplifying complex agricultural data through a user-friendly interface to help farmers make informed decisions.</p>
+                    <h2>AgriAssist</h2>
+                <a href="https://rameshpunyamanthula.github.io/AgriAssist/" target="_blank" class="floating-link-btn"><i class="fas fa-external-link-alt"></i>
+                        </a>
+                    <p>AgriAssist is a smart platform that supports rural communities. It provides essential tools like real-time weather updates and crop suggestions, simplifying complex agricultural data through a user-friendly interface to help farmers make informed decisions.</p>
                 <h2 style="margin-top: 10px;">Highlights</h2>
                 <ul>
                 <li>Provides farmers with real-time data to help them make informed decisions.</li>
@@ -102,9 +107,12 @@
                 <strong>Technical Hub</strong> | Surampalem, Andhra Pradesh &nbsp; | &nbsp; 01-05-2025 to 30-06-2025
                 </p>
                 <p style="margin-top: 10px;">Completed a hands-on internship focused on frontend development using HTML and CSS. I designed and implemented responsive, user-friendly interfaces, ensuring mobile compatibility and visual appeal. I also contributed to website layout and styling, which enhanced overall usability and design consistency, and strengthened my knowledge of core web technologies.</p>
-                <p style="margin-top: 10px;">
+                <!-- <p style="margin-top: 10px;">
                 Certificate:&nbsp;  <a href="https://drive.google.com/file/d/1Ap4CrdiRBT1DZ3OPTEJ62JqvOjJFSr-3/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;">Link</a>
-                </p><br>
+                </p> -->
+                <div class="certibtn">
+                    <a href="https://drive.google.com/file/d/1Ap4CrdiRBT1DZ3OPTEJ62JqvOjJFSr-3/view?usp=sharing" target="_blank" style="text-decoration: none;">📑Certificate</a>
+                </div>
                 </div>
                 </div>
                 <div id="ACHIEVE">
