--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -6,7 +7,7 @@
         <title>Dharani's Portfolio</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <link rel="stylesheet" href="./portfolio.css">
+        <link rel="stylesheet" href="./Portfolio.css">
     </head>
     <body>
         <header>
@@ -34,7 +35,7 @@
                     <a href="tel:+91 9912558090" target="_blank"><i class="fas fa-phone"></i> </a>
                 </div>
                 <div class="loc">
-                    <h6><i class="fa-solid fa-location-dot" style="color: green;"></i> Kakinada, India</h6>
+                    <h6><i class="fa-solid fa-location-dot" style="color: #6a1a7c;"></i> Kakinada, India</h6>
                 </div>
             </div>
             <div class="right">
@@ -47,15 +48,15 @@
             <h1 class="s1">Skills & Interests</h1>
             <div class="s2box ">
                 <h2><i class="fas fa-code"></i>&nbsp; Programming Languages</h2>
-                <p style="color:white;">C++, C, Java, Python</p>
+                <p style="color:black;">C++, C, Java, Python</p>
             </div>
             <div class="s2box">
                         <h2><i class="fas fa-desktop"></i>&nbsp; Web Technologies</h2>
-                        <p style="color:white;">HTML, CSS, JavaScript</p>
+                        <p style="color:black;">HTML, CSS, JavaScript</p>
                     </div>
                     <div class="s2box">
                         <h2><i class="fas fa-database"></i>&nbsp; Database</h2>
-                        <p style="color:white;">SQL Database (MySQL)</p>
+                        <p style="color:black;">SQL Database (MySQL)</p>
                     </div>
                     <!-- <div class="s2box">
                         <h2> <i class="fa-solid fa-hard-drive"></i>&nbsp; Operating Systems</h2>
@@ -63,7 +64,7 @@
                     </div> -->
                     <div class="s2box">
                         <h2><i class="fa fa-briefcase"></i>&nbsp; Professional Skills</h2>
-                        <p>Time Management, Communication, Teamwork, Adaptability</p>
+                        <p style="color:black;">Time Management, Communication, Teamwork, Adaptability</p>
                     </div>
         </div></div>
         <div id="PROJECTS">
@@ -145,39 +146,39 @@
                 <div class="certifications">
                     <h1 class="s1">Certifications</h1>
                     <div class="cert-card">
-                        <i class="fas fa-certificate" style="color: lightblu"></i>&nbsp;&nbsp;
-                        <span>Certified in HTML and CSS from <a href="https://drive.google.com/file/d/1yZO84xcT7EU5R5FLQOs3hDt5fo10X2oV/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;"><strong>Certiport IT Pearson</strong></a>.</span>
+                        <i class="fas fa-certificate" style="color: #6a1a7c;"></i>&nbsp;&nbsp;
+                        <span>Certified in HTML and CSS from <a href="https://drive.google.com/file/d/1yZO84xcT7EU5R5FLQOs3hDt5fo10X2oV/view?usp=sharing" target="_blank" style="color: #6a1a7c; text-decoration: none;"><strong>Certiport IT Pearson</strong></a>.</span>
                     </div>
 
                     <div class="cert-card">
-                        <i class="fas fa-certificate" style="color:go"></i>&nbsp;&nbsp;
-                        <span>Certified in Java Foundations from <a href="https://drive.google.com/file/d/1iU6klwA7eHh3WHg_BOxYRNwGWOub499t/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;"><strong>Oracle Academy</strong></a>.</span>
+                        <i class="fas fa-certificate" style="color:#6a1a7c;"></i>&nbsp;&nbsp;
+                        <span>Certified in Java Foundations from <a href="https://drive.google.com/file/d/1iU6klwA7eHh3WHg_BOxYRNwGWOub499t/view?usp=sharing" target="_blank" style="color: #6a1a7c; text-decoration: none;"><strong>Oracle Academy</strong></a>.</span>
                     </div>
                     <div class="cert-card">
-                        <i class="fas fa-certificate" style="color:go"></i>&nbsp;&nbsp;
-                        <span>Earned an <a href="https://drive.google.com/file/d/1kHE0KcZqwuhN3FX9E93A-tHe5iRo1n-j/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;"><strong>Infosys Springboard</strong></a> certification on Validating HTML Forms using JavaScript.</span>
-                    </div>
-
-                    <div class="cert-card">
-                        <i class="fas fa-certificate" style="color:go"></i>&nbsp;&nbsp;
-                        <span>Earned the <a href="https://drive.google.com/file/d/1hUzKJoM4QzltVo1K5uZUsQxDkchE8K8C/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;"><strong>HackerRank Certified SQL (Basic)</strong></a> certificate.</span>
+                        <i class="fas fa-certificate" style="color:#6a1a7c;"></i>&nbsp;&nbsp;
+                        <span>Earned an <a href="https://drive.google.com/file/d/1kHE0KcZqwuhN3FX9E93A-tHe5iRo1n-j/view?usp=sharing" target="_blank" style="color: #6a1a7c; text-decoration: none;"><strong>Infosys Springboard</strong></a> certification on Validating HTML Forms using JavaScript.</span>
                     </div>
 
                     <div class="cert-card">
-                        <i class="fas fa-certificate" style="color:gol0d"></i>&nbsp;&nbsp;
-                        <span>Achieved <a href="https://drive.google.com/file/d/1JA5RaJ2dxkL4zbqZuXC4ti3fB2DZtX8T/view?usp=sharing" target="_blank" style="color: green; text-decoration: none;"><strong>Red Hat Certified System Administrator (RHCSA)</strong></a> certification.</span>
+                        <i class="fas fa-certificate" style="color:#6a1a7c;"></i>&nbsp;&nbsp;
+                        <span>Earned the <a href="https://drive.google.com/file/d/1hUzKJoM4QzltVo1K5uZUsQxDkchE8K8C/view?usp=sharing" target="_blank" style="color: #6a1a7c; text-decoration: none;"><strong>HackerRank Certified SQL (Basic)</strong></a> certificate.</span>
+                    </div>
+
+                    <div class="cert-card">
+                        <i class="fas fa-certificate" style="color:#6a1a7c;"></i>&nbsp;&nbsp;
+                        <span>Achieved <a href="https://drive.google.com/file/d/1JA5RaJ2dxkL4zbqZuXC4ti3fB2DZtX8T/view?usp=sharing" target="_blank" style="color: #6a1a7c; text-decoration: none;"><strong>Red Hat Certified System Administrator (RHCSA)</strong></a> certification.</span>
                     </div>
                 </div></div>
                 <div id="EDUCATION">
                 <div class="edu">
                     <h1 class="s1">Education</h1>
                 <div class="s2box">
-                        <h3 style="color: green;">Bachelor of Technology, Computer Science Engineering</h3>
+                        <h3 style="color: #6a1a7c;">Bachelor of Technology, Computer Science Engineering</h3>
                         <p><strong>Aditya College of Engineering and Technology</strong> &nbsp; | &nbsp; 2023 - 2027</p>
                         <p><strong>CGPA:</strong> 8.99</p>
                     </div>
                     <div class="s2box">
-                        <h3 style="color: green;">Intermediate, MPC</h3>
+                        <h3 style="color: #6a1a7c;">Intermediate, MPC</h3>
                         <p><strong>Sri Chaitanya Junior College</strong> &nbsp; | &nbsp; 2021 - 2023</p>
                         <p><strong>Percentage:</strong> 92.3</p>
                     </div></div></div>
